# lolcat-ultra

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs  test.txt
.claude/skills/rust-performance/: SKILL.md
benches/: processor_bench.rs  rgb_to_256.rs
src/: ansi.rs  color.rs  config.rs  lib.rs  main.rs  processor.rs  rainbow.rs  terminal.rs
